--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
-streamlit
-pandas
-matplotlib.pyplot
-seaborn
-plotly.graph_objects
-plotly.express
-plotly.io
-yadisk
-tqdm
+streamlit==1.35.0
+pandas==2.2.2
+matplotlib==3.9.0
+seaborn==0.13.2
+plotly==5.22.0
+yadisk==2.1.0
+tqdm==4.66.4
 os
 zipfile
