--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-streamlit==1.35.0
-pandas==2.2.2
-matplotlib==3.9.0
-seaborn==0.13.2
-plotly>=4
-os
+streamlit
+pandas
+matplotlib
+seaborn
+plotly
 zipfile
